--- a/VolumeRaycaster.ui
+++ b/VolumeRaycaster.ui
@@ -30,17 +30,26 @@
      </sizepolicy>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider">
+   <widget class="QSlider" name="tfSlider">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>430</y>
-      <width>471</width>
+      <width>451</width>
       <height>22</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>10</number>
+    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksBelow</enum>
+    </property>
+    <property name="tickInterval">
+     <number>1</number>
     </property>
    </widget>
   </widget>
@@ -58,7 +67,7 @@
     <enum>LeftToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="actionSelection"/>
    <addaction name="actionDeletion"/>
