--- a/VolumeRaycaster.ui
+++ b/VolumeRaycaster.ui
@@ -113,6 +113,7 @@
     <addaction name="action2_Views"/>
     <addaction name="actionOverview"/>
     <addaction name="actionShading"/>
+    <addaction name="actionLogScale"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
@@ -140,6 +141,7 @@
    <addaction name="action2_Views"/>
    <addaction name="actionOverview"/>
    <addaction name="actionShading"/>
+   <addaction name="actionLogScale"/>
   </widget>
   <action name="actionOpen">
    <property name="icon">
@@ -262,6 +264,14 @@
    </property>
    <property name="text">
     <string>Density +</string>
+   </property>
+  </action>
+  <action name="actionLogScale">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>LogScale</string>
    </property>
   </action>
  </widget>
